--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,9 @@
-<h2>User Profile</h2>
+<h3>Welcome <%= @user.email %>!</h3>
 
-<h3> Welcome <%= @user.email %>! You have signed in <%= @user.sign_in_count %> times.</h3>
+<div class="col-md-8">
+  <%= render partial: 'items/form', locals: { item: @item } %>
+</div>
+
+<div class="col-md-8">
+  <%= render partial: 'items/item', locals: { item: @item } %>
+</div>
